ENH: Suppressing warnings about duplicate libraries in Darwin.      At some point this will be addressed by the following CMake feature request:      http://public.kitware.com/Bug/view.php?id=10179
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11749 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -69,6 +69,10 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   # curl suppressions
   "cmcurl.*warning.*conditional expression is constant"
 
+  # Suppressing warnings about duplicate libraries in Darwin
+  # At some point this may be addressed by CMake feature request: 
+  # http://public.kitware.com/Bug/view.php?id=10179
+  "ld: warning: duplicate dylib.*"
 
   # While working on cleaning Slicer3/SlicerQT code base - Temporarly remove CLI warnings
   #"[Ss]licer3.[Aa]pplications.(cli|CLI)"
