ENH: added SliderSpinBoxLabel Plugin, add it and SliderPlugin to Designer export
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11759 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/Plugins/CMakeLists.txt
+++ b/Libs/qCTKWidgets/Plugins/CMakeLists.txt
@@ -29,6 +29,8 @@ SET(designer_plugin_SRCS
   qCTKTreeComboBoxPlugin.h
   qCTKSliderPlugin.cxx
   qCTKSliderPlugin.h
+  qCTKSliderSpinBoxLabelPlugin.cxx
+  qCTKSliderSpinBoxLabelPlugin.h
   )
 
 SET(designer_plugin_MOC_SRCS
@@ -44,6 +46,7 @@ SET(designer_plugin_MOC_SRCS
   qCTKTitleComboBoxPlugin.h
   qCTKTreeComboBoxPlugin.h
   qCTKSliderPlugin.h
+  qCTKSliderSpinBoxLabelPlugin.h
   )
 
 SET(designer_plugin_TARGET_LIBRARIES
