--- a/Libs/Qdec/CMakeLists.txt
+++ b/Libs/Qdec/CMakeLists.txt
@@ -94,9 +94,9 @@ install(TARGETS ${lib_name}
 # --------------------------------------------------------------------------
 # Testing (requires some of the examples)
 
-# IF(BUILD_TESTING)
-#  ADD_SUBDIRECTORY(Testing)
-# ENDIF(BUILD_TESTING)
+IF(BUILD_TESTING)
+  ADD_SUBDIRECTORY(Testing)
+ENDIF(BUILD_TESTING)
 
 # --------------------------------------------------------------------------
 # Install support files
