COMP: Adding the CMAKE_BUILD_TYPE term to the executable path, so it can be found in Windows.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11774 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/Testing/CMakeLists.txt
+++ b/Libs/qCTKWidgets/Testing/CMakeLists.txt
@@ -33,6 +33,11 @@ TARGET_LINK_LIBRARIES(${KIT}CxxTests ${LIBRARY_NAME})
 
 SET( qCTKWidgets_TESTS ${CXX_TEST_PATH}/${KIT}CxxTests)
 
+IF(WIN32)
+  SET(qCTKWidgets_TESTS ${CXX_TEST_PATH}/${CMAKE_BUILD_TYPE}/${KIT}CxxTests)
+ENDIF(WIN32)
+
+
 MACRO( SIMPLE_TEST  TESTNAME )
   ADD_TEST( ${TESTNAME} ${LAUNCH_EXE}  ${qCTKWidgets_TESTS} ${TESTNAME} )
 ENDMACRO( SIMPLE_TEST  )
