ENH: Refactorize qMRMLTransformProxyMode: Move general behavior into qMRMLTreeProxyModel. Keep transform hierarchy specific code into qMRMLTransformProxyMode. qMRMLItemModel is now obsolete.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11781 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qMRMLWidgets/CMakeLists.txt
+++ b/Libs/qMRMLWidgets/CMakeLists.txt
@@ -15,8 +15,8 @@ ENDIF(NOT DEFINED BUILD_SHARED_LIBS)
 # Sources
 #
 SET(qMRMLWidgets_SRCS
-  qMRMLItemModel.cxx
-  qMRMLItemModel.h
+  #qMRMLItemModel.cxx
+  #qMRMLItemModel.h
   qMRMLItemHelper.cxx
   qMRMLItemHelper.h
   qMRMLLinearTransformSlider.cxx
@@ -41,6 +41,9 @@ SET(qMRMLWidgets_SRCS
   qMRMLTransformProxyModel.h
   qMRMLTransformSliders.cxx
   qMRMLTransformSliders.h
+  qMRMLTreeProxyModel.cxx
+  qMRMLTreeProxyModel.h
+  qMRMLTreeProxyModel_p.h
   qMRMLTreeWidget.cxx
   qMRMLTreeWidget.h
   qMRMLUtils.cxx
@@ -49,7 +52,6 @@ SET(qMRMLWidgets_SRCS
 
 # Headers that should run through moc
 SET(qMRMLWidgets_MOC_SRCS
-  qMRMLItemModel.h
   qMRMLLinearTransformSlider.h
   qMRMLListWidget.h
   qMRMLMatrixWidget.h
@@ -60,7 +62,8 @@ SET(qMRMLWidgets_MOC_SRCS
   qMRMLSceneGeneratorButton.h
   qMRMLSceneModel.h
   qMRMLTransformProxyModel.h
-  qMRMLTransformProxyModel_p.h
+  qMRMLTreeProxyModel.h
+  qMRMLTreeProxyModel_p.h
   qMRMLTransformSliders.h
   qMRMLTreeWidget.h
   )
