ENH: Remove redundant libraries.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11797 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/vtkITK/CMakeLists.txt
+++ b/Libs/vtkITK/CMakeLists.txt
@@ -7,11 +7,17 @@ ENDIF(COMMAND CMAKE_POLICY)
 MARK_AS_ADVANCED(CMAKE_BACKWARDS_COMPATIBILITY)
 
  
-find_package(VTK REQUIRED)
-include(${VTK_USE_FILE})
+if(NOT VTK_FOUND)
+  message(STATUS " vtk not found in vtkITK")
+  find_package(VTK REQUIRED)
+  include(${VTK_USE_FILE})
+endif(NOT VTK_FOUND)
 
-find_package(ITK REQUIRED)
-include(${ITK_USE_FILE})
+if(NOT ITK_FOUND)
+  message(STATUS " itk not found in vtkITK")
+  find_package(ITK REQUIRED)
+  include(${ITK_USE_FILE})
+endif(NOT ITK_FOUND)
 
 if(NOT DEFINED BUILD_SHARED_LIBS)
   option(BUILD_SHARED_LIBS "Build with shared libraries." ON)
@@ -114,22 +120,14 @@ add_library(${lib_name}
 SET(libs
   ITKAlgorithms
   ITKNumerics 
-  ITKCommon
-  ITKBasicFilters
-  ITKNumerics
   ITKStatistics
   ITKBasicFilters
   ITKIO
   ITKDICOMParser
-  vtkCommon
-  vtkFiltering
-  vtkImaging
   )
 IF (VTK_WRAP_TCL)
   SET(libs
     ${libs}
-    vtkCommonTCL
-    vtkFilteringTCL
     vtkImagingTCL
     )
 ENDIF (VTK_WRAP_TCL)
