--- a/Libs/vtkITK/Testing/CMakeLists.txt
+++ b/Libs/vtkITK/Testing/CMakeLists.txt
@@ -27,7 +27,7 @@ ENDIF (WIN32)
 SET (VTKITKTESTVECTORREADER_SOURCE VTKITKVectorReader.cxx)
 ADD_EXECUTABLE (VTKITKVectorReader ${VTKITKTESTVECTORREADER_SOURCE})
 TARGET_LINK_LIBRARIES (VTKITKVectorReader 
-  vtkITK ITKCommon)
+  vtkITK)
 ADD_TEST (VTKITKVectorReader 
   ${Slicer3_EXE} --launch ${WRAPPED_EXE_PREFIX}/VTKITKVectorReader ${MRML_TEST_DATA_DIR}/fixed.nrrd
   )
@@ -35,6 +35,6 @@ ADD_TEST (VTKITKVectorReader
 SET (VTKITKBSPLINETRANSFORM_SOURCE VTKITKBSplineTransform.cxx)
 ADD_EXECUTABLE (VTKITKBSplineTransform ${VTKITKBSPLINETRANSFORM_SOURCE})
 TARGET_LINK_LIBRARIES (VTKITKBSplineTransform
-  vtkITK ITKCommon)
+  vtkITK)
 ADD_TEST (VTKITKBSplineTransform
   ${Slicer3_EXE} --launch ${WRAPPED_EXE_PREFIX}/VTKITKBSplineTransform)
