COMP: Update CMakeLists.txt and add dependent libraries allowing to compile SlicerQT with TCL wrapping disabled
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11802 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/MRML/CMakeLists.txt
+++ b/Libs/MRML/CMakeLists.txt
@@ -244,6 +244,12 @@ IF (VTK_WRAP_TCL)
     ${libs}
     vtkHybridTCL
     )
+ELSE (VTK_WRAP_TCL)
+  SET(libs
+    ${libs}
+    vtkHybrid
+    vtkRendering
+    )
 ENDIF (VTK_WRAP_TCL)
 target_link_libraries(${lib_name}
   ${libs}
