ENH: Adding testing infrastructure for TractographyFiducialSeeding.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11806 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/TractographyFiducialSeeding/CMakeLists.txt
+++ b/QTModules/TractographyFiducialSeeding/CMakeLists.txt
@@ -45,3 +45,9 @@ Slicer3_build_qtmodule(
   TARGET_LIBRARIES ${qt_module_target_libraries}
   RESOURCES ${qt_module_resources}
   )
+
+if(BUILD_TESTING)
+  add_subdirectory(Testing)
+endif(BUILD_TESTING)
+
+
