--- a/Libs/MRMLCLI/CMakeLists.txt
+++ b/Libs/MRMLCLI/CMakeLists.txt
@@ -60,15 +60,30 @@ SET(MRMLCLI_SRCS
   )
 
 # --------------------------------------------------------------------------
-# Build and install the library
-SET(srcs
-  ${MRMLCLI_SRCS}
-  )
+# Sources
 
+# Wrapping
+if (VTK_WRAP_TCL)
+   include("${VTK_CMAKE_DIR}/vtkWrapTcl.cmake") 
+   vtk_wrap_tcl3(MRMLCLI  MRMLCLI_TCL_SRCS   "${MRMLCLI_SRCS}" "")
+endif (VTK_WRAP_TCL)
+
+SET(srcs
+ ${MRMLCLI_SRCS}
+ )
+
+if (VTK_WRAP_TCL)
+  set(srcs
+        ${srcs}
+        ${MRMLCLI_TCL_SRCS}
+   )
+endif (VTK_WRAP_TCL)
+
+# Build and install the library 
 SET(lib_name MRMLCLI)
 ADD_LIBRARY(${lib_name} 
   ${srcs}
-  )
+ )
 
 SET(libs
   MRML
