--- a/Modules/Editor/CMakeLists.txt
+++ b/Modules/Editor/CMakeLists.txt
@@ -46,3 +46,7 @@ install(
   FILES ${IMAGEFILES}
   DESTINATION ${Slicer3_INSTALL_MODULES_SHARE_DIR}/${PROJECT_NAME}/ImageData
   )
+
+IF(BUILD_TESTING)
+  ADD_SUBDIRECTORY(Testing)
+ENDIF(BUILD_TESTING)
