--- a/Libs/MRML/CMakeLists.txt
+++ b/Libs/MRML/CMakeLists.txt
@@ -168,6 +168,8 @@ set(MRML_SRCS
   vtkMRMLDoubleArrayNode.cxx
   vtkMRMLPlotNode.cxx
   vtkMRMLOrthogonalLinePlotNode.cxx
+  #
+  vtkMRMLDoubleArrayStorageNode.cxx
   # Note: when you add new node types, add
   # register code to the vtkMRMLScene constructor
   )
