ENH: SlicerQt: add a new widget: qCTKDoubleSlider. It's like a QSlider but handles doubles. It obsoletes qCTKSlider.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11833 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/CMakeLists.txt
+++ b/Libs/qCTKWidgets/CMakeLists.txt
@@ -40,6 +40,8 @@ SET(qCTKWidgets_SRCS
   qCTKColorPickerButton.h
   qCTKCoordinatesWidget.cxx
   qCTKCoordinatesWidget.h
+  qCTKDoubleSlider.cxx
+  qCTKDoubleSlider.h
   qCTKFittedTextBrowser.cxx
   qCTKFittedTextBrowser.h
   qCTKFlowLayout.cxx
@@ -67,6 +69,7 @@ SET(qCTKWidgets_MOC_SRCS
   qCTKCollapsibleGroupBox.h
   qCTKColorPickerButton.h
   qCTKCoordinatesWidget.h
+  qCTKDoubleSlider.h
   qCTKFittedTextBrowser.h
   qCTKMatrixWidget.h
   qCTKModelTester.h
