ENH: SlicerQt: add a new widget: qCTKDoubleSlider. It's like a QSlider but handles doubles. It obsoletes qCTKSlider.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11835 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/qCTKWidgets/Testing/CMakeLists.txt
+++ b/Libs/qCTKWidgets/Testing/CMakeLists.txt
@@ -10,6 +10,7 @@ CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   qCTKCollapsibleGroupBoxTest1.cxx
   qCTKColorPickerButtonTest1.cxx
   qCTKCoordinatesWidgetTest1.cxx
+  qCTKDoubleSliderTest1.cxx
   qCTKFittedTextBrowserTest1.cxx
   qCTKFlowLayoutTest1.cxx
   qCTKMatrixWidgetTest1.cxx
