COMP: Added MRMLCLI to SlicerQT_FORWARD_PATH_INSTALL in SlicerQT/CMakeLists.txt
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11845 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/SlicerQT/CMakeLists.txt
+++ b/Applications/SlicerQT/CMakeLists.txt
@@ -92,6 +92,7 @@ IF(BUILD_SHARED_LIBS)
        \"../lib/LoadableModule\",                                   \\
        \"../lib/MGHImageIO\",                                       \\
        \"../lib/MRML\",                                             \\
+       \"../lib/MRMLCLI\",                                          \\
        \"../lib/ModuleDescriptionParser\",                          \\
        \"../lib/MRMLIDImageIO\",                                    \\
        \"../lib/Qdec\",                                             \\
