ENH: SlicerQT - ModuleFactories are now registered with a ModuleFactoryManager
The class ModuleFactory has been removed and most of its behavior has been
transferred to ModuleFactoryManager.

The different module factories are now:
  - CoreModuleFactory
  - LoadableModuleFactory  (for QTModules)
  - CLILoadableModuleFactory
  - CLIExecutableModuleFactory
  - CLIPythonModuleFactory (not yet added ..)

The library dependencies have been updated from:

QTBase -> QTCLI ---------> QTCore -> QTGUI -> qSlicerQT -> SlicerQT
      |                      |
       -> QTCoreModules -----|

to

QTBase -> QTCore -> QTGUI -> qSlicerQT -> SlicerQT
                |                   |
                 -> QTCLI  ---------|
                |                   |
                 -> QTCoreModules --|

Method {initializeLoadable,CmdLine}ModulesPaths have been removed. Their
existing behavior has been added to:
  - qSlicerLoadableModuleFactory::modulePath
  - qSlicerCLIModuleFactoryHelper

The former is used by the CLI factories.

The moduleFactoryManager provides methods that allow to register/instantiate
module based on the factoryName. The factoryName corresponds the the name used
to register the factories using 'registerFactory' method. The preferred name
for a factory is its className.

git-svn-id: http://svn.slicer.org/Slicer3/trunk@11847 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCLI/CMakeLists.txt
+++ b/Base/QTCLI/CMakeLists.txt
@@ -18,13 +18,19 @@ SET(slicer_qtbase_include_directories
 
 # Source files
 SET(slicer_qtbase_SRCS
+  qSlicerCLIExecutableModuleFactory.cxx
+  qSlicerCLIExecutableModuleFactory.h
+  qSlicerCLILoadableModuleFactory.cxx
+  qSlicerCLILoadableModuleFactory.h
   qSlicerCLIModule.cxx
   qSlicerCLIModule.h
+  qSlicerCLIModuleFactoryHelper.cxx
+  qSlicerCLIModuleFactoryHelper.h
+  qSlicerCLIModuleLogic.cxx
+  qSlicerCLIModuleLogic.h
   qSlicerCLIModuleWidget.cxx
   qSlicerCLIModuleWidget.h
   qSlicerCLIModuleWidget_p.h
-  qSlicerCLIModuleLogic.cxx
-  qSlicerCLIModuleLogic.h
   )
 
 # Headers that should run through moc
@@ -46,6 +52,7 @@ SET(qt_module_resources
 SET(slicer_qtbase_target_libraries
   qCTKWidgets
   qSlicerBaseQTBase
+  qSlicerBaseQTCore
   SlicerBaseLogic
   ModuleDescriptionParser
   MRMLCLI
