ENH: SlicerQt: module logic now derive from vtkSlicerLogic (ideally vtkSlicerModuleLogic) instead of qSlicerModuleLogic
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11849 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/QTCLI/CMakeLists.txt
+++ b/Base/QTCLI/CMakeLists.txt
@@ -26,11 +26,11 @@ SET(slicer_qtbase_SRCS
   qSlicerCLIModule.h
   qSlicerCLIModuleFactoryHelper.cxx
   qSlicerCLIModuleFactoryHelper.h
-  qSlicerCLIModuleLogic.cxx
-  qSlicerCLIModuleLogic.h
   qSlicerCLIModuleWidget.cxx
   qSlicerCLIModuleWidget.h
   qSlicerCLIModuleWidget_p.h
+  vtkSlicerCLIModuleLogic.cxx
+  vtkSlicerCLIModuleLogic.h
   )
 
 # Headers that should run through moc
