COMP: Fix various warnings + update CTestCustom.cmake to exclude openigtlink Libs
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11855 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/CTestCustom.cmake.in
+++ b/CTestCustom.cmake.in
@@ -74,6 +74,6 @@ SET(CTEST_CUSTOM_WARNING_EXCEPTION
   # http://public.kitware.com/Bug/view.php?id=10179
   "ld: warning: duplicate dylib.*"
 
-  # While working on cleaning Slicer3/SlicerQT code base - Temporarly remove CLI warnings
-  #"[Ss]licer3.[Aa]pplications.(cli|CLI)"
+  # Libs/OpenIGTLink
+  "(OpenIGTLink|openigtlink).[Ss]ource.igtl*"
 )
