ENH: Add a test for vtkSlicerTransformLogic.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11856 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Base/Logic/Testing/CMakeLists.txt
+++ b/Base/Logic/Testing/CMakeLists.txt
@@ -14,6 +14,7 @@ SET(CMAKE_TESTDRIVER_BEFORE_TESTMAIN "DEBUG_LEAKS_ENABLE_EXIT_ERROR();" )
 CREATE_TEST_SOURCELIST(Tests ${KIT}CxxTests.cxx
   vtkDataIOManagerLogicTest1.cxx
   vtkSlicerSliceLogicTest1.cxx
+  vtkSlicerTransformLogicTest1.cxx
   EXTRA_INCLUDE TestingMacros.h
 )
 
@@ -26,3 +27,7 @@ TARGET_LINK_LIBRARIES(${KIT}CxxTests ${lib_name})
 
 SIMPLE_TEST( vtkDataIOManagerLogicTest1 )
 SIMPLE_TEST( vtkSlicerSliceLogicTest1 )
+ADD_TEST( vtkSlicerTransformLogicTest1 ${LAUNCH_EXE}
+  ${KIT_TESTS} vtkSlicerTransformLogicTest1
+  ${CMAKE_CURRENT_SOURCE_DIR}/affineTransform.txt
+  )
