ENH: separated Tractography Logic and MRML classes into a separate library called Logic for use by both KW and Qt
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11878 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/Tractography/CMakeLists.txt
+++ b/Modules/Tractography/CMakeLists.txt
@@ -17,6 +17,7 @@ endif(NOT Slicer3_SOURCE_DIR)
 
 # --------------------------------------------------------------------------
 SET(Tractography_libs
+  Logic
   Seeding
   Settings
   Display
