ENH: added Tractography Logic lib
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11879 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/QTModules/TractographyFiducialSeeding/CMakeLists.txt
+++ b/QTModules/TractographyFiducialSeeding/CMakeLists.txt
@@ -26,8 +26,7 @@ SET(qt_module_target_libraries
   #${KWWidgets_LIBRARIES}
   #${ITK_LIBRARIES}
   #CommandLineModule
-  #SlicerTractographyDisplay
-  #SlicerTractographyFiducialSeeding
+  SlicerTractographyLogic
   )
 
 # Resources
