ENH: Simple Return Parameters from CommandLineModules (integer, integer-vector, etc.)
git-svn-id: http://svn.slicer.org/Slicer3/trunk@11881 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Libs/ModuleDescriptionParser/CMakeLists.txt
+++ b/Libs/ModuleDescriptionParser/CMakeLists.txt
@@ -55,6 +55,7 @@ install(FILES
 set(ModuleDescriptionParser_SRCS
   ModuleParameter.cxx
   ModuleParameterGroup.cxx
+  ModuleDescriptionUtilities.cxx
   ModuleDescription.cxx
   ModuleDescriptionParser.cxx
   ModuleProcessInformation.cxx
